Add questions, offers, and reports

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,6 +3,8 @@
 
 en:
   about: "About"
+  am: 'AM'
+  ask_a_question: 'Ask a Question'
   browse: "browse"
   buying: "buying"
   contact: "Contact"
@@ -10,14 +12,22 @@ en:
   feedback: "feedback"
   filter: "filter"
   login: "login"
+  make_an_offer: "Make an Offer"
+  message: 'Message'
   new_listing: 'new listing'
+  offer_amount: 'Offer Amount'
+  pickup_availability: 'Pickup Availability'
+  pm: 'PM'
   preferences: 'preferences'
   privacy_policy: "Privacy Policy"
   register: "register"
+  report_abuse: 'Report Abuse'
   search: "Search"
   selling: "selling"
   sign_out: "sign out"
   submit: "Submit"
   support: "Support"
   terms_of_service: "Terms of Service"
+  weekday: 'weekday'
+  weekend: 'weekend'
   welcome: "Welcome"
