Keep categories filtered, Add All filter

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,7 @@ en:
   ask_a_question: 'Ask a Question'
   browse: "browse"
   buying: "buying"
+  categories: "categories"
   contact: "Contact"
   dashboard: "dashboard"
   date: "date"
