revised user bar

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,7 +37,7 @@ en:
   rules: "rules"
   search: "Search"
   selling: "selling"
-  sign_out: "sign out"
+  sign_out: "log out"
   submit: "Submit"
   support: "Support"
   tagline: "A new era of classifieds."
